# frame2kg_eval_benchmark

./: .gitignore  LICENSE  README.md  USAGE_GUIDE.md  demo_cli.sh  example_usage.py  final_full_eval.sh  pyproject.toml  quickstart.sh  requirements.txt  run_valdev_eval.sh  select_valdev_winners.py  setup.py  test_eval_local.py  test_hf_dataset.py
frame2kg_eval/: __init__.py
frame2kg_eval/cli/: aggregate.py  doctor.py  evaluate.py  sweep.py
frame2kg_eval/config/: defaults.yaml
frame2kg_eval/io/: compressed_tokens.py  groundtruth.py  preds.py  schema.py
frame2kg_eval/matching/: assign.py  iou.py  text.py
frame2kg_eval/metrics/: boxes.py  composite.py  conformity.py  edges.py  nodes.py  timing.py  validity.py
frame2kg_eval/tests/: test_boxes.py  test_composite.py  test_conformity.py  test_integration.py  test_invalid_predictions.py  test_iou.py  test_matching.py  test_metrics.py  test_normalise.py  test_schema.py
frame2kg_eval/utils/: ids.py  logging.py  normalise.py  seeding.py
sample_preds/: manifest.csv  video1.001.json  video1.002.json  video1.003.raw.txt
